# sftocsv

./: .gitignore  README.md  makefile  pyproject.toml  setup.py
sftocsv/: __init__.py  sftocsv.py  utils.py
sftocsv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: context.py  test_sftocsv.py  test_utils.py
